--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>Eventagram \_O_/</title>
+    <link href="components/bootstrap/css/bootstrap.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -12,6 +13,8 @@
 
     <!-- Vendor libs -->
     <script src="components/angular/angular.js"></script>
+    <script src="components/jquery/jquery.js"></script>
+    <script src="components/bootstrap/js/bootstrap.js"></script>
 
     <!-- App libs -->
     <script src="app/app.js"></script>
