--- a/client/index.html
+++ b/client/index.html
@@ -40,13 +40,17 @@
     <!-- Vendor libs -->
     <script src="components/angular/angular.js"></script>
     <script src="components/jquery/jquery.js"></script>
+    <script src="components/angular-resource/angular-resource.js"></script>
     <script src="components/bootstrap/js/bootstrap.js"></script>
 
     <!-- App libs -->
+    <!-- For now, new controllers etc. will require manual addition. When this becomes a problem we can look -->
+    <!-- into using a module load, such as RequireJs, to handle it for us. YAGNI for now though. -->
     <script src="app/app.js"></script>
     <script src="app/controllers/dashboard.js"></script>
     <script src="app/controllers/events.js"></script>
     <script src="app/controllers/navigation.js"></script>
+    <script src="app/services/eventService.js"></script>
 
 </body>
 </html>
